@@ -1,3 +1,12 @@
+2008-06-28  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
+
+        Reviewed by Sam.
+
+        Add a test to check exception sequencing for native calls.
+
+        * fast/js/exception-sequencing-expected.txt:
+        * fast/js/exception-sequencing.html:
+
 2008-06-28  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
